expr-ast-antlr/.antlr/ExprParser.java
// Generated from /home/gaurav/college/compiler/expr-ast-antlr/Expr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		IDENTIFIER=39, NUMBER=40, CHAR=41, STRING_LITERAL=42, COMMENT=43, NS=44;
	public static final int
		RULE_start = 0, RULE_interlist = 1, RULE_inter = 2, RULE_expression = 3, 
		RULE_ternary_opr = 4, RULE_expression_stmnt = 5, RULE_selection_stmnt = 6, 
		RULE_iterative_stmnnt = 7, RULE_jump_stmnt = 8, RULE_statement_list = 9, 
		RULE_datatype = 10, RULE_array = 11, RULE_arg_decl = 12, RULE_initialization = 13, 
		RULE_declinfo = 14, RULE_declist = 15, RULE_parameter_list = 16, RULE_local_param_list = 17, 
		RULE_function_args = 18, RULE_idlist = 19, RULE_func_def = 20, RULE_func_call = 21, 
		RULE_compound_stmnt = 22, RULE_statement = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "interlist", "inter", "expression", "ternary_opr", "expression_stmnt", 
			"selection_stmnt", "iterative_stmnnt", "jump_stmnt", "statement_list", 
			"datatype", "array", "arg_decl", "initialization", "declinfo", "declist", 
			"parameter_list", "local_param_list", "function_args", "idlist", "func_def", 
			"func_call", "compound_stmnt", "statement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'-'", "'!'", "'*'", "'/'", "'+'", "'<='", "'<'", 
			"'>='", "'>'", "'=='", "'!='", "'and'", "'or'", "'='", "'check'", "'yes'", 
			"'no'", "';'", "'if'", "'else'", "'while'", "'for'", "'continue'", "'break'", 
			"'return'", "'int'", "'uint'", "'char'", "'bool'", "'void'", "'['", "']'", 
			"']['", "','", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "IDENTIFIER", "NUMBER", "CHAR", "STRING_LITERAL", "COMMENT", 
			"NS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public InterlistContext interlist() {
			return getRuleContext(InterlistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			interlist(0);
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterlistContext extends ParserRuleContext {
		public InterlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interlist; }
	 
		public InterlistContext() { }
		public void copyFrom(InterlistContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Interlist_interContext extends InterlistContext {
		public InterContext inter() {
			return getRuleContext(InterContext.class,0);
		}
		public Interlist_interContext(InterlistContext ctx) { copyFrom(ctx); }
	}
	public static class Interlist_interlist_interContext extends InterlistContext {
		public InterlistContext interlist() {
			return getRuleContext(InterlistContext.class,0);
		}
		public InterContext inter() {
			return getRuleContext(InterContext.class,0);
		}
		public Interlist_interlist_interContext(InterlistContext ctx) { copyFrom(ctx); }
	}

	public final InterlistContext interlist() throws RecognitionException {
		return interlist(0);
	}

	private InterlistContext interlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InterlistContext _localctx = new InterlistContext(_ctx, _parentState);
		InterlistContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_interlist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Interlist_interContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(52);
			inter();
			}
			_ctx.stop = _input.LT(-1);
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Interlist_interlist_interContext(new InterlistContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_interlist);
					setState(54);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(55);
					inter();
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class InterContext extends ParserRuleContext {
		public InterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inter; }
	 
		public InterContext() { }
		public void copyFrom(InterContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Inter_parameter_listContext extends InterContext {
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Inter_parameter_listContext(InterContext ctx) { copyFrom(ctx); }
	}
	public static class Inter_funcdefContext extends InterContext {
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public Inter_funcdefContext(InterContext ctx) { copyFrom(ctx); }
	}

	public final InterContext inter() throws RecognitionException {
		InterContext _localctx = new InterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inter);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Inter_parameter_listContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				parameter_list();
				}
				break;
			case 2:
				_localctx = new Inter_funcdefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				func_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expression_NUMBER_tagContext extends ExpressionContext {
		public TerminalNode NUMBER() { return getToken(ExprParser.NUMBER, 0); }
		public Expression_NUMBER_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_array_tagContext extends ExpressionContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public Expression_array_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_not_equal_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_not_equal_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_logical_and_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_logical_and_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_add_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_add_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_less_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_less_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_assign_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_assign_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_STRING_LITERAL_tagContext extends ExpressionContext {
		public TerminalNode STRING_LITERAL() { return getToken(ExprParser.STRING_LITERAL, 0); }
		public Expression_STRING_LITERAL_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_logical_or_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_logical_or_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_mul_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_mul_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_div_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_div_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_great_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_great_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_CHAR_tagContext extends ExpressionContext {
		public TerminalNode CHAR() { return getToken(ExprParser.CHAR, 0); }
		public Expression_CHAR_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_unary_minus_tagContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Expression_unary_minus_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_le_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_le_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_ge_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_ge_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_exactly_equal_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_exactly_equal_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_func_call_tagContext extends ExpressionContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Expression_func_call_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_brackets_expression_tagContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Expression_brackets_expression_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_unary_excl_tagContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Expression_unary_excl_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_IDENTIFIER_tagContext extends ExpressionContext {
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Expression_IDENTIFIER_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_binary_sub_tagContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Expression_binary_sub_tagContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new Expression_NUMBER_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(66);
				match(NUMBER);
				}
				break;
			case 2:
				{
				_localctx = new Expression_IDENTIFIER_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(67);
				match(IDENTIFIER);
				}
				break;
			case 3:
				{
				_localctx = new Expression_STRING_LITERAL_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68);
				match(STRING_LITERAL);
				}
				break;
			case 4:
				{
				_localctx = new Expression_CHAR_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(69);
				match(CHAR);
				}
				break;
			case 5:
				{
				_localctx = new Expression_array_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70);
				array();
				}
				break;
			case 6:
				{
				_localctx = new Expression_func_call_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(71);
				func_call();
				}
				break;
			case 7:
				{
				_localctx = new Expression_brackets_expression_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72);
				match(T__0);
				setState(73);
				expression(0);
				setState(74);
				match(T__1);
				}
				break;
			case 8:
				{
				_localctx = new Expression_unary_minus_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				match(T__2);
				setState(77);
				expression(15);
				}
				break;
			case 9:
				{
				_localctx = new Expression_unary_excl_tagContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(78);
				match(T__3);
				setState(79);
				expression(14);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(121);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Expression_binary_mul_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(82);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(83);
						match(T__4);
						setState(84);
						expression(14);
						}
						break;
					case 2:
						{
						_localctx = new Expression_binary_div_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(85);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(86);
						match(T__5);
						setState(87);
						expression(13);
						}
						break;
					case 3:
						{
						_localctx = new Expression_binary_add_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(88);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(89);
						match(T__6);
						setState(90);
						expression(12);
						}
						break;
					case 4:
						{
						_localctx = new Expression_binary_sub_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(91);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(92);
						match(T__2);
						setState(93);
						expression(11);
						}
						break;
					case 5:
						{
						_localctx = new Expression_binary_le_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(94);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(95);
						match(T__7);
						setState(96);
						expression(10);
						}
						break;
					case 6:
						{
						_localctx = new Expression_binary_less_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(97);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(98);
						match(T__8);
						setState(99);
						expression(9);
						}
						break;
					case 7:
						{
						_localctx = new Expression_binary_ge_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(100);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(101);
						match(T__9);
						setState(102);
						expression(8);
						}
						break;
					case 8:
						{
						_localctx = new Expression_binary_great_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(103);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(104);
						match(T__10);
						setState(105);
						expression(7);
						}
						break;
					case 9:
						{
						_localctx = new Expression_binary_exactly_equal_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(106);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(107);
						match(T__11);
						setState(108);
						expression(6);
						}
						break;
					case 10:
						{
						_localctx = new Expression_binary_not_equal_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(109);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(110);
						match(T__12);
						setState(111);
						expression(5);
						}
						break;
					case 11:
						{
						_localctx = new Expression_binary_logical_and_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(112);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(113);
						match(T__13);
						setState(114);
						expression(4);
						}
						break;
					case 12:
						{
						_localctx = new Expression_binary_logical_or_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(115);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(116);
						match(T__14);
						setState(117);
						expression(3);
						}
						break;
					case 13:
						{
						_localctx = new Expression_binary_assign_tagContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(118);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(119);
						match(T__15);
						setState(120);
						expression(1);
						}
						break;
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Ternary_oprContext extends ParserRuleContext {
		public Ternary_oprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ternary_opr; }
	 
		public Ternary_oprContext() { }
		public void copyFrom(Ternary_oprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Ternary_opr_tagContext extends Ternary_oprContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Ternary_opr_tagContext(Ternary_oprContext ctx) { copyFrom(ctx); }
	}

	public final Ternary_oprContext ternary_opr() throws RecognitionException {
		Ternary_oprContext _localctx = new Ternary_oprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ternary_opr);
		try {
			_localctx = new Ternary_opr_tagContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__16);
			setState(127);
			expression(0);
			setState(128);
			match(T__17);
			setState(129);
			expression(0);
			setState(130);
			match(T__18);
			setState(131);
			expression(0);
			setState(132);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_stmntContext extends ParserRuleContext {
		public Expression_stmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_stmnt; }
	 
		public Expression_stmntContext() { }
		public void copyFrom(Expression_stmntContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expression_stmnt_expressionContext extends Expression_stmntContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Expression_stmnt_expressionContext(Expression_stmntContext ctx) { copyFrom(ctx); }
	}
	public static class Expression_stmnt_semicolonContext extends Expression_stmntContext {
		public Expression_stmnt_semicolonContext(Expression_stmntContext ctx) { copyFrom(ctx); }
	}
